--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mboullouz-commons",
-    "version": "1.0.6",
+    "version": "1.0.7",
     "description": "Reusable library written in TypeScript.",
     "main": "./dist/lib/umd.js",
     "browser": "./dist/lib/index.js",
@@ -33,7 +33,8 @@
     "license": "LICENS",
     "dependencies": {
         "jquery": "^3.3.1",
-        "js-joda": "^1.8.2"
+        "js-joda": "^1.8.2",
+        "moment": "^2.22.2"
     },
     "devDependencies": {
         "@types/jquery": "3.3.5",
