--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,13 @@
         "target": "es5",
         "module": "commonjs",
         "declaration": true,
-        "noImplicitAny": true,
+        "noImplicitAny": false,
         "removeComments": false,
         "sourceMap": true,
         "outDir": "./dist",
         "noLib": false,
         "preserveConstEnums": true,
-        "strict": true
+        "strict": false
     },
     "exclude": [
         "node_modules",
